name:                ava
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ava
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ava
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SpriterBindings
                     , SpriterTypes
  default-language:    Haskell2010
  extra-libraries:     spriterengine stdc++
  c-sources:           src/SpriterBindings.cpp
                     , src/jsonspriterfiledocumentwrapper.cpp
                     , src/jsonspriterfileattributewrapper.cpp
                     , src/jsonspriterfileelementwrapper.cpp
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5
                     , dependent-sum
                     , dependent-sum-template
                     , dependent-map
                     , Hipmunk
                     , inline-c
                     , inline-c-cpp
                     , lens
                     , linear
                     , mtl
                     , reflex
                     , ref-tf
                     , sdl2 >= 2.1
                     , sdl2-gfx
                     , sdl2-image
                     , StateVar
                     , template-haskell
                     , transformers
                     , vector
