name:                ava
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ava
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ava
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Characters
                     , ChipmunkBindings
                     , ChipmunkCTypes
                     , ChipmunkTypes
                     , Game
                     , Graphics
                     , Input
                     , Instances
                     , Level
                     , MonadGame
                     , Reflex.Time
                     , SpriterBindings
                     , SpriterTypes
  default-language:    Haskell2010
  extra-libraries:     spriterengine chipmunk pthread stdc++
  c-sources:           src/SpriterBindings.cpp
                     , src/ChipmunkBindings.c
                     , src/jsonspriterfiledocumentwrapper.cpp
                     , src/jsonspriterfileattributewrapper.cpp
                     , src/jsonspriterfileelementwrapper.cpp
  -- include-dirs:        ../../sfml/CSFML-2.3/include
  -- extra-lib-dirs:      ../../sfml/CSFML-2.3/build/lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , containers >= 0.5
                     , dependent-sum
                     , dependent-sum-template
                     , dependent-map
                     , inline-c
                     , inline-c-cpp
                     , lens
                     , linear
                     , mtl
                     , primitive
                     , random
                     , reflex
                     , ref-tf
                     , SFML
                     , StateVar
                     , template-haskell
                     , these
                     , time
                     , transformers
                     , unbounded-delays
                     , vector
