name:                super-awesome-power-princess
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/super-awesome-power-princess#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable super-awesome-power-princess
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 4.9
                     , containers >= 0.5
                     , sdl2 >= 2.1
                     , sdl2-image
                     , reflex
                     , transformers
                     , mtl
                     , dependent-sum
